# pisama-agent-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
src/pisama_agent_sdk/: __init__.py  atif.py  auto_verify.py  bridge.py  check.py  check_compliance.py  clarification.py  config.py  evaluator.py  heal.py  indication.py  openhands_adapter.py  tools.py  types.py
src/pisama_agent_sdk/chaos/: __init__.py  config.py  experiments.py
src/pisama_agent_sdk/cli/: __init__.py  openhands_monitor.py
src/pisama_agent_sdk/hooks/: __init__.py  pre_tool_use.py
tests/: test_atif.py  test_bridge.py  test_chaos_hooks.py  test_check_compliance.py  test_heal.py  test_openhands_adapter.py  test_real_public_workflows.py
tests/fixtures/harbor/: PROVENANCE.toml
