[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-agent-sdk"
version = "0.2.1"
description = "ATIF trace adapters and real-time failure hooks for agent runtimes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Pisama Team", email = "team@pisama.ai" }
]
keywords = ["claude", "agent", "sdk", "detection", "hooks", "pisama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pisama-core>=1.7.3,<2",
]

[project.optional-dependencies]
evaluator = [
    "httpx>=0.28.1",
]
telemetry = [
    "posthog>=3.0",
]
dev = [
    "build>=1.2",
    "mypy>=1.8",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "httpx>=0.28.1",
    "ruff>=0.12,<1",
    "twine>=5.0",
]

[project.scripts]
# Phase C of plan-to-all-5-unified-glade.md: batch analysis of a
# completed OpenHands / Harbor-on-OpenHands session directory.
pisama-openhands-monitor = "pisama_agent_sdk.cli.openhands_monitor:main"

[project.urls]
Homepage = "https://pisama.ai"
Documentation = "https://docs.pisama.ai/agent-sdk"
Repository = "https://github.com/Pisama-AI/pisama-agent-sdk"
Issues = "https://github.com/Pisama-AI/pisama-agent-sdk/issues"
Changelog = "https://github.com/Pisama-AI/pisama-agent-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pisama_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "SECURITY.md",
    "src",
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "pisama_core.*",
    "posthog",
]
ignore_missing_imports = true
